[tool.poetry]
name = "flowsig"
version = "0.3.0"
description = "Infer dependent intercellular communication from single-cell and spatial transcriptomics data."
authors = ["Axel A. Almet"]
license = "MIT"
readme = "README.md"
packages = [{ include = "flowsig", from = "src" }]

# Optional but recommended metadata for PyPI
homepage = "https://github.com/axelalmet/flowsig"
repository = "https://github.com/axelalmet/flowsig"
documentation = "https://flowsig.readthedocs.io"
keywords = ["single-cell", "spatial", "cell-cell-communication", "transcriptomics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

scanpy = ">=1.11.0,<2.0.0"
squidpy = ">=1.6.5,<2.0.0"
numpy = ">=1.26.0,<2.2.0"                 # aligns with TF 2.19.x requirements :contentReference[oaicite:1]{index=1}
scipy = ">=1.10.1,<2.0.0"
pandas = ">=2.2.3,<3.0.0"
anndata = ">=0.11.3,<0.12.0"
networkx = ">=3.4.2,<4.0.0"
joblib = ">=1.4.2,<2.0.0"
matplotlib = ">=3.10.1,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
tqdm = ">=4.67.1,<5.0.0"
geopandas = ">=1.1.1,<2.0.0"

causaldag = ">=0.1a163,<0.2"
graphical-models = ">=0.1a21,<0.2"

# Your ML stack (note: your dependency tree shows tensorflow 2.19.1) :contentReference[oaicite:2]{index=2}
tensorflow = ">=2.19.0,<3.0.0"
tensorflow-probability = ">=0.25.0,<0.26.0"  # shown in your tree :contentReference[oaicite:3]{index=3}
tf-keras = ">=2.19.0,<3.0.0"

dm-tree = ">=0.1.9,<0.2.0"
cnmf = ">=1.7.0,<2.0.0"
pyliger = ">=0.2.4,<0.3.0"

# VCS dependency (pip will fetch from GitHub during install)
spatial-factorization = { git = "https://github.com/willtownes/spatial-factorization-py.git" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
ruff = "^0.6"
mypy = "^1.10"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0"
myst-parser = "^3.0.1"   # appears in your tree :contentReference[oaicite:4]{index=4}
furo = "^2024.8.6"       # appears in your tree :contentReference[oaicite:5]{index=5}
sphinx-autodoc-typehints = "^2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"