[metadata]
name = flowsig
version = 0.1.0
description = Method to find communication-driven intercellular flows from single-cell RNA-sequencing and spatial transcriptomics data

[options]
packages = find:
install_requires =
    anndata
    causaldag
    graphical_models
    joblib
    networkx
    numpy
    pandas
    pyliger
    scanpy
    scikit_learn
    scipy
    setuptools
    squidpy
    tensorflow
    tensorflow_probability
