[metadata]
name = flowsig
version = 0.1.2
description = Method to find communication-driven intercellular flows from single-cell RNA-sequencing and spatial transcriptomics data

[options]
packages = find:
install_requires =
    anndata
    bokeh
    causaldag
    colorcet
    datashader
    dill
    graphical_models
    holoviews
    joblib
    matplotlib
    networkx
    numpy
    pandas
    pyliger
    scanpy
    scikit-image
    scikit_learn
    scipy
    setuptools
    squidpy
    tensorflow
    tensorflow_probability
    wheel
    spatial-factorization @ git+https://github.com/willtownes/spatial-factorization-py.git@c7c7fbb22a7ed9abccca94b759e4601b78d874b